--- a/results/basic-concurrency/measure.yaml
+++ b/results/basic-concurrency/measure.yaml
@@ -1,6 +1,6 @@
 # scenario: basic
 # measure -o results/basic-concurrency results/basic-concurrency/measure.yaml --output-prefix 5-workers- --start 2023-08-24T05:50:39Z --end 2023-08-24T06:05:39Z
-# measure -o results/basic-concurrency results/basic-concurrency/measure.yaml --output-prefix 5-workers-v1- --start 2023-08-24T07:31:25Z --end 2023-08-24T07:46:25Z
+# measure -o results/basic-concurrency results/basic-concurrency/measure.yaml --output-prefix 15-workers- --start 2023-08-24T12:58:23Z --end 2023-08-24T13:13:23Z
 queries:
 - name: cpu
   query: sum(rate(container_cpu_usage_seconds_total{namespace="webhosting-system", container="manager"}[2m])) by (pod)
