--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,11 +1,11 @@
 {
 	// See https://go.microsoft.com/fwlink/?LinkId=827846 to learn about workspace recommendations.
 	// Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
-
-	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
 		"james-yu.latex-workshop",
 		"yzhang.markdown-all-in-one",
 		"davidanson.vscode-markdownlint",
+		"streetsidesoftware.code-spell-checker",
+		"ms-python.python",
 	],
 }
