--- a/results/scale-out/controller-slis.yaml
+++ b/results/scale-out/controller-slis.yaml
@@ -1,12 +1,12 @@
 queries:
-- name: latency-queue # SLO 1
+- name: latency-queue # SLI 1
   query: |
     histogram_quantile(0.99, sum by (le) (
       workqueue_queue_duration_seconds_bucket{
         job="webhosting-operator", name="website"
       }
     ))
-- name: latency-reconciliation # SLO 2
+- name: latency-reconciliation # SLI 2
   query: |
     histogram_quantile(0.99, sum by (le) (
       experiment_website_reconciliation_duration_seconds_bucket{
